Live chat helpdesk

--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,7 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+  <script> window.intergramId = "393329448" </script>
+  <script id="intergram" type="text/javascript" src="https://www.intergram.xyz/js/widget.js"></script>
   </body>
 </html>
