--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       js.src = "//connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v2.9";
       fjs.parentNode.insertBefore(js, fjs);
   }(document, 'script', 'facebook-jssdk'));</script>
-    <div id="root"></div>
+    <div id="root">
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
