--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.jpg">
+
+
+
+    <link rel="stylesheet" href="https://unpkg.com/react-switch-button/dist/react-switch-button.css">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -16,6 +21,7 @@
     <title>To Buy | App</title>
   </head>
   <body>
+
   <div id="fb-root"></div>
   <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
@@ -47,6 +53,9 @@
     ga('send', 'pageview');
 
   </script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.1/react-dom.min.js"></script>
+  <script src="https://unpkg.com/classnames/index.js"></script>
+  <script src="https://unpkg.com/react-switch-button/dist/react-switch-button.js"></script>
   </body>
 </html>
